--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 html, body {
 	height: 100%;
+	font-family: 'Montserrat', serif;
+	/*font-family: 'Raleway', serif;*/
 }
 article, aside, footer, header, main, nav, section {
   display: block;
@@ -9,49 +11,65 @@ body{
 	width: 100%;
 	margin: 0;
 	padding: 0;
-	font-family: 'Open Sans';
 	font-size: 17px;
 	line-height: 28px;
-	font-style:none;}
+	font-style:none;
+}
 h1{
-	font-family: 'Vollkorn SC';
-	font-size: 35px;
-	text-shadow: 2px 2px gray;}
-/*the project title*/
+	font-size: 38px;
+	font-weight: bold;
+}
 h2{
-	font-size: 15px;
+	font-size: 28px;
 	text-align: center;
 	padding: 0 5%;
-	margin: 2%}
+	margin: 2%;
+	color: black;
+}
 h3{
-	color: gray;
-	font-size: 16px;
-	text-align: center;}
-/*hs in project-content*/
+	font-size: 18px;
+	text-align: center;
+	padding: 0 5%;
+	margin: 2%;
+	color: black;
+}
 h4{
-	margin: 5px 0;
-	color: #FF6C00;
-	font-size: 18px;}
-h5{
-	margin: 1%;
+	font-size: 16px;
+	text-align: center;
+	padding: 0 5%;
+	margin: 2%;
 	color: gray;
-	font-size: 28px;}
+}
+/*h in project-content*/
+h5{
+	margin: 1% 0;
+	color: #FF6C00;
+	font-size: 20px;
+}
+h6{
+	margin: 1% 0;
+	color: gray;
+	font-size: 18px;
+}
 p{
+	margin: 0% 0% 5% 0%;
 	font-size: 18px;
 	line-height: 29px;}
 a{
 	color: gray;
 	text-decoration: none;
+	font-style: bold;
+	color: #FF6C00;
 }
 b{
 	font-style: bold;
 }
 header{
 	position: fixed;
-	width: 80%;
-	height: 7%;
+	width: 90%;
+	height: 6%;
 	z-index: 99;
-    padding: 1% 10%;
+    padding: 1% 5%;
     clear: left;
     background-color: #FFDEAD;
 }
@@ -67,47 +85,77 @@ footer{
     clear: left;
     text-align: center;
 	font-size: 18px;
-	font-family: 'Vollkorn SC';
 	color: gray;
 }
-.wrapper{
-	padding: 35px 0;
+.traits{
+	float: left;
+    width: 24%;
+    height: 18%;
+    margin: 0 2%;
+    position: relative;
+	padding: 2%;
+	text-align: center;
+	box-shadow: 10px 10px 50px grey; 
+    border-radius: 10%;
+    background-color: rgba(248, 157, 70, 0.2);
 }
-.parallax-index-1{ 
-    /* The image used */
-    background-image: url("img/parallax_index_1.jpg");
+.traits:hover{
+    background-color: #ffeaa7;
+}
+.parallax-100{ 
 	opacity: 0.8;
     /* Full height */
     height: 100%; 
-
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
-.parallax-art-1{ 
-    /* The image used */
-    background-image: url("img/parallax_art_1.jpg");
-	opacity: 0.8;
+.parallax-small{ 
     /* Full height */
-    height: 70%; 
-
+    height: 70%;
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
+.parallax-index-1{
+	background-image: url("img/parallax_index_1.jpg");}
+.parallax-art-1{ 
+    background-image: url("img/parallax_art_1.jpg");}
+.parallax-krtco{
+	background-image: url("projects/banner/krtco.jpg");}	
+.parallax-nsysuhero{
+	background-image: url("projects/banner/nsysuhero.jpg");}	
 .intro{
 	text-align: center;
 	padding: 20% 5% 8% 5%;
 	color: black;
 }
-.index{
-	padding: 3%;
+.wrapper{
+	padding: 30px 0;
 }
-.artwork{
+.wrapper-index{
+	width: 80%;
+	padding: 35px 0;
+	margin: 0 auto;
+}
+.seemore{
+	float: left;
+	width: 60%;
+	padding: 5% 20%;
+	height: 5%;
+	margin: 10% 0 0 0;
+	background-color: #FFDEAD;
+}
+.wrapper-project{
+	width: 100%;
+	padding: 30px 0;
+	margin: 0 auto;
+}
+.art{
 	text-align: center;
 	padding: 0% 5%;
 }
@@ -123,7 +171,7 @@ footer{
     z-index: 99;
     position: fixed;
     width: 100%;
-    height: 35px;
+    height: 30px;
 	margin: 0;
 	font-size: 22px;
 	padding: 10px;
@@ -135,13 +183,14 @@ footer{
 	z-index: 99;
 }
 .btn_nav{
-	font-size: 18px;
+ 	font-size: 18px;
 	line-height: 100%;
 	margin: 4px;
 	padding: 15px 15px;
-	float: right;
-	transition: background-color 0.5s ease;
-	text-decoration: none;}
+ 	float: right;
+ 	transition: background-color 0.5s ease;
+	text-decoration: none;
+}
 .btn_nav:hover{
 	color: white;
 	background-color: #FF6C00;
@@ -151,7 +200,8 @@ footer{
 	color: white;
 }
 .light{
-	color: #FF6C00;
+	color: white;
+	background-color: #FF6C00;
 }
 .center{
 	margin: auto;
@@ -231,21 +281,23 @@ footer{
     color: white;
     background-color: #0096D6;
 }
-.row{
+.row-index{
 	width: 80%;
-	margin: 1% auto;
+	margin: 1% 1% 10% 1%;
 	float: left;
 	padding: 0 10%;
 }
 .project-small{
 	cursor: pointer;
-	width: 48%;
+	width: 46%;
 	display: table;
 	float: left;
 	position: relative;
-	margin: 0 1% auto;
-	background-color: rgba(248, 157, 70, 0.2);
+	margin: 2%;
+	/*background-color: rgba(248, 157, 70, 0.2);*/
+	/*box-shadow: 10px 10px 50px grey; */
 	transition: all .2s ease-in-out;
+	/*border-radius: 15px;*/
 }
 .project:hover{
 	background-color: white;
@@ -317,25 +369,25 @@ footer{
 	width: 32%;
 	padding: 0.5%;
 }
-.prow {
+/*.prow {
     width: 100%;
     float: left;
     text-align: left;
     margin: 0.5%;
-}
-.pcol{
+}*/
+/*.pcol{
 	width: 30%;
 	float: left;
 	text-align: left;
 	margin: 0.5%;
     padding: 0% 1.5%;
-}
-.pcol-img{
+}*/
+/*.pcol-img{
 	width: 50%;
 	float: left;
 	text-align: left;
 	margin: 1%;
-}
+}*/
 .title{
 	font-size: 20px;
 }
@@ -359,11 +411,55 @@ img.project-size{
 	height: auto;
 	padding: 5% 5% 0% 5%;
 }
-
+img.img-col-one{
+	width: 100%;
+	height: auto;
+	margin: 0%;
+}
+img.img-col-two{
+	width: 100%;
+	height: auto;
+	margin: 0;
+}
+img.img-col-three{
+	width: 33%;
+	height: auto;
+	margin: 0%;
+}
 video{
 	margin: 0 15% auto;
-	width:70%;
+	width: 70%;
 	padding: 1%;
+}
+.svg-index{
+	width: 40%;
+}
+.row-project{
+	float: left;
+	width: 60%;
+	height: 100%;
+	padding: 0 20%;
+}
+.row-project-color{
+	background-color: ;
+}
+.col-one{
+	float: left;
+	width: 100%;
+	margin: 0 5%;
+	position: relative;
+}
+.col-two{
+	float: left;
+	width: 40%;
+	margin: 0 5%;
+	position: relative;
+}
+.col-three{
+	float: left;
+	width: 23%;
+	margin: 0 5%;
+	position: relative;
 }
 .drawer{
 	display: none;
@@ -444,7 +540,7 @@ video{
 /******************************************************/
 /******************************************************/
 /******************************************************/
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 650px) {
 header{
     padding: 2%;
     clear: left;
@@ -471,7 +567,6 @@ footer{
     clear: left;
     text-align: center;
 	font-size: 19px;
-	font-family: 'Vollkorn SC';
 	color: gray;
 }
 .intro{
@@ -614,7 +709,7 @@ footer{
 	height: 90%;
 	background-color: white;
 	color: white;
-	position: absolute;
+	position: fixed;
 }
 
 .drawer_btn_nav{
@@ -664,6 +759,7 @@ footer{
 	float: left;
 	position: relative;
 	padding: 1%;
+	box-shadow: 10px 10px 50px grey; 
 	background-color: rgba(248, 157, 70, 0.2);
 	transition: all .2s ease-in-out;
 }
@@ -680,13 +776,22 @@ footer{
 	left: 0;
 	overflow: scroll;
 }
+.project-description{
+	width: 50%
+}
 .row{
 	width: 100%;
 	margin: 1% auto;
 	float: left;
 	padding: 0 1%;	
 }
-.prow{
+.row-index{
+	width: 92%;
+	float: left;
+	text-align: left;
+	padding: 4%;
+}
+.row-project{
 	width: 92%;
 	float: left;
 	text-align: left;
@@ -702,6 +807,34 @@ footer{
 	float: left;
 	text-align: left;
 	margin: 1%;
+}
+.col-two{
+	width: 100%;
+}
+.wrapper-index{
+	width: 100%;
+	padding: 35px 0;
+	margin: 0 auto;
+}
+.wrapper-project{
+	width: 90%;
+	padding: 35px 0;
+	margin: 0 auto;
+}
+.traits{
+	float: left;
+    width: 80%;
+    height: 18%;
+    margin: 5%;
+    position: relative;
+	padding: 5%;
+	text-align: center;
+	box-shadow: 10px 10px 50px grey; 
+    border-radius: 15px;
+    background-color: rgba(248, 157, 70, 0.2);;
+}
+img.img-column-two{
+	width: 40%;
 }
 }
 
