--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 html, body {
 	height: 100%;
-	font-family: 'Montserrat', serif;
-	/*font-family: 'Raleway', serif;*/
+	/*font-family: 'Montserrat', serif;*/
+	font-family: 'Raleway', serif;
 }
 article, aside, footer, header, main, nav, section {
   display: block;
@@ -48,7 +48,7 @@ h5{
 }
 h6{
 	margin: 1% 0;
-	color: gray;
+	/*color: gray;*/
 	font-size: 18px;
 }
 p{
@@ -97,7 +97,7 @@ footer{
 	text-align: center;
 	box-shadow: 10px 10px 50px grey; 
     border-radius: 10%;
-    background-color: rgba(248, 157, 70, 0.2);
+    background-color: #fffaf0;
 }
 .traits:hover{
     background-color: #ffeaa7;
@@ -114,7 +114,7 @@ footer{
 }
 .parallax-small{ 
     /* Full height */
-    height: 70%;
+    width: 100%;
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
@@ -122,13 +122,18 @@ footer{
     background-size: cover;
 }
 .parallax-index-1{
-	background-image: url("img/parallax_index_1.jpg");}
+	background-image: url("img/parallax_index_1.jpg");
+}
 .parallax-art-1{ 
-    background-image: url("img/parallax_art_1.jpg");}
+    background-image: url("img/parallax_art_1.jpg");
+}
 .parallax-krtco{
-	background-image: url("projects/banner/krtco.jpg");}	
+	background-image: url("projects/banner/krtco.png");
+}	
 .parallax-nsysuhero{
-	background-image: url("projects/banner/nsysuhero.jpg");}	
+	background-image: url("projects/banner/nsysuhero.png");
+	
+}	
 .intro{
 	text-align: center;
 	padding: 20% 5% 8% 5%;
@@ -156,7 +161,7 @@ footer{
 }
 .wrapper-project{
 	width: 100%;
-	padding: 5% 0;
+	padding: 2% 0;
 	margin: 0 auto;
 }
 .art{
@@ -301,12 +306,7 @@ footer{
 	/*background-color: rgba(248, 157, 70, 0.2);*/
 	/*box-shadow: 10px 10px 50px grey; */
 	transition: all .2s ease-in-out;
-	/*border-radius: 15px;*/
 }
-.project:hover{
-	background-color: white;
-	opacity: 0.7;
-	transform: scale(1.05);}
 .project-small:hover{
 	background-color: white;
 	opacity: 0.7;
@@ -373,25 +373,6 @@ footer{
 	width: 32%;
 	padding: 0.5%;
 }
-/*.prow {
-    width: 100%;
-    float: left;
-    text-align: left;
-    margin: 0.5%;
-}*/
-/*.pcol{
-	width: 30%;
-	float: left;
-	text-align: left;
-	margin: 0.5%;
-    padding: 0% 1.5%;
-}*/
-/*.pcol-img{
-	width: 50%;
-	float: left;
-	text-align: left;
-	margin: 1%;
-}*/
 .title{
 	font-size: 20px;
 }
@@ -417,17 +398,17 @@ img.project-size{
 }
 img.img-col-one{
 	width: 100%;
-	margin: 3% 0 0 0;
+	margin: 5% 0 0 0;
 	height: auto;
 }
 img.img-col-two{
 	width: 100%;
-	margin: 3% 0 0 0;
+	margin: 4% 0 0 0;
 	height: auto;
 }
 img.img-col-three{
 	width: 33%;
-	margin: 3% 0 0 0;
+	margin: 4% 0 0 0;
 	height: auto;
 }
 video{
@@ -445,7 +426,7 @@ video{
 	padding: 2% 20%;
 }
 .row-project-color{
-	background-color: ;
+	background-color: #fffaf0;
 }
 .col-one{
 	float: left;
