--- a/style-mobile.css
+++ b/style-mobile.css
@@ -31,9 +31,19 @@ footer{
 	font-size: 19px;
 	color: gray;
 }
+.parallax-small{ 
+    /* Full height */
+    /*width: 100%;*/
+    height: 35%;
+    /* Create the parallax scrolling effect */
+    background-attachment: fixed;
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: 100%;
+}
 .intro{
 	text-align: center;
-	padding: 20% 5% 0% 5%;
+	padding: 14% 5% 0% 5%;
 }
 .artwork{
 	text-align: center;
@@ -42,6 +52,11 @@ footer{
 #avatar{
 	width: 60%;
 	padding: 10% 20%;
+}
+.light{
+	color: white;
+    padding: 5%;
+	background-color: #FF6C00;
 }
 .drawer-toggle{ 
 	cursor: pointer;
@@ -68,10 +83,10 @@ footer{
 	background-color: gray;
 }
 .logo{
-	height: 97%;
+	height: 80%;
 	float: left;
-	left: 2%;
-	top: 1%;
+	left: 15px;
+	top: 10%;
 	position: absolute;
 }
 /* Icon 3 */
@@ -221,8 +236,6 @@ footer{
 	float: left;
 	position: relative;
 	padding: 1%;
-	box-shadow: 10px 10px 50px grey; 
-	background-color: rgba(248, 157, 70, 0.2);
 	transition: all .2s ease-in-out;
 }
 .project-content{
