--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h1{
 	font-weight: bold;
 }
 h2{
-	font-size: 28px;
+	font-size: 24px;
 	text-align: center;
 	padding: 0 5%;
 	margin: 2%;
@@ -48,7 +48,7 @@ h5{
 }
 h6{
 	margin: 1% 0;
-	/*color: gray;*/
+	color: gray;
 	font-size: 18px;
 }
 p{
@@ -89,18 +89,15 @@ footer{
 }
 .traits{
 	float: left;
-    width: 24%;
+    width: 22.5%;
     height: 18%;
-    margin: 0 2%;
+    margin: 0 3%;
     position: relative;
 	padding: 2%;
 	text-align: center;
 	box-shadow: 10px 10px 50px grey; 
     border-radius: 10%;
     background-color: #fffaf0;
-}
-.traits:hover{
-    background-color: #ffeaa7;
 }
 .parallax-100{ 
 	opacity: 0.8;
@@ -195,7 +192,7 @@ footer{
  	font-size: 18px;
 	line-height: 100%;
 	margin: 4px;
-	padding: 15px 15px;
+	padding: 10px 15px;
  	float: right;
  	transition: background-color 0.5s ease;
 	text-decoration: none;
@@ -423,7 +420,7 @@ video{
 	float: left;
 	width: 60%;
 	height: 100%;
-	padding: 2% 20%;
+	padding: 3% 20%;
 }
 .row-project-color{
 	background-color: #fffaf0;
@@ -456,6 +453,25 @@ video{
 /******************************************************/
 /******************************************************/
 /******************************************************/
+.toolbar{
+	width: 90%;
+	padding: 0% 5%;
+	margin: auto;
+	text-align: center;
+	background-color: white;
+	z-index: 98;
+}
+.fixedTop{
+	position: fixed;
+	top: 0;
+	width: 90%;
+	height: 6%;
+	padding: 1% 5%;
+	margin: auto;
+	text-align: center;
+	background-color: white;
+	z-index: 98;
+}
 #portfolio {  
     margin: 2% 6%;
     -webkit-column-count: 3; 
@@ -488,6 +504,13 @@ video{
     height: auto;
     margin-bottom: 1rem;
   
+}
+.fil-cat{
+
+}
+.selectedClass{
+	background-color: #FF6C00;
+	color: white !important;
 }
 .btn {
     font-size: 1rem;
