--- a/style.css
+++ b/style.css
@@ -5,9 +5,7 @@ html, body {
 	/*font-family: 'Montserrat', serif;*/
 	font-family: 'Raleway', serif;
 }
-article, aside, footer, header, main, nav, section {
-  display: block;
-}
+article, aside, footer, header, main, nav, section {display: block;}
 body{
 	width: 100%;
 	margin: 0;
@@ -16,6 +14,31 @@ body{
 	line-height: 28px;
 	font-style:none;
 }
+header{
+	position: fixed;
+	width: 90%;
+	height: 6%;
+	z-index: 99;
+    padding: 1% 5%;
+    clear: left;
+    /*background-color: white;*/
+}
+nav{
+	text-align: center;
+	padding-bottom: 2%;
+    background-color: #FFDEAD;
+}
+ul{padding-left: 10%;}
+footer{
+    padding: 8%;
+    clear: left;
+    text-align: center;
+	font-size: 18px;
+	color: gray;
+}
+/*****************************************************/
+/****************** header and text ******************/
+/*****************************************************/
 h1{
 	font-size: 36px;
 	line-height: 40px;
@@ -32,14 +55,14 @@ h3{
 	font-size: 16px;
 	text-align: center;
 	padding: 0 5%;
-	margin: 2%;
+	margin: 1%;
 	color: black;
 }
 h4{
 	font-size: 15px;
 	text-align: center;
 	padding: 0 5%;
-	margin: 2%;
+	margin: 1%;
 	color: gray;
 }
 /*h in project-content*/
@@ -56,12 +79,14 @@ h6{
 hr{
 	border-color: #FF6C00;
 	opacity: 0.5;
-	width: 80%;
+	width: 100%;
+	margin: 5% 0;
+	border-width: 2px;
 }
 p{
-	margin: 0% 0% 3% 0%;
+	margin: 0% 0% 2% 0%;
 	font-size: 18px;
-	line-height: 29px;}
+	line-height: 30px;}
 a{
 	color: gray;
 	text-decoration: none;
@@ -69,44 +94,9 @@ a{
 	font-weight: 600;
 	color: #FF6C00;
 }
-b{
-	font-style: bold;
-}
-header{
-	position: fixed;
-	width: 90%;
-	height: 6%;
-	z-index: 99;
-    padding: 1% 5%;
-    clear: left;
-    /*background-color: white;*/
-}
-nav{
-	text-align: center;
-	padding-bottom: 2%;
-    background-color: #FFDEAD;
-}
-article{
-}
-footer{
-    padding: 8%;
-    clear: left;
-    text-align: center;
-	font-size: 18px;
-	color: gray;
-}
-.traits{
-	float: left;
-    width: 22.5%;
-    height: 18%;
-    margin: 0 3%;
-    position: relative;
-	padding: 2%;
-	text-align: center;
-	/*box-shadow: 2px 2px 12px grey;*/
-    border-radius: 10%;
-    background-color: white;
-}
+/*****************************************************/
+/********************* parallax **********************/
+/*****************************************************/
 .parallax-100{ 
 	opacity: 0.8;
     /* Full height */
@@ -140,59 +130,130 @@ footer{
 }
 .parallax-art-1{ 
     background-color: #FFDEAD;
-    /*background-image: url("img/parallax_art_1.jpg");*/
+    background-image: url("img/parallax_art_1.jpg");
 }
-.parallax-krtco{
-	background-image: url("projects/banner/krtco.png");
-}	
-.parallax-nsysuhero{
-	background-image: url("projects/banner/nsysuhero.png");
-}
-.parallax-designdiary{
-	background-image: url("projects/banner/designdiary.jpg");	
-}
-.parallax-artism{
-	background-image: url("projects/banner/artism.jpg");	
-}
+.parallax-krtco{background-image: url("projects/banner/krtco.png");}	
+.parallax-nsysuhero{background-image: url("projects/banner/nsysuhero.png");}
+.parallax-designdiary{background-image: url("projects/banner/designdiary.jpg");}
+.parallax-artism{background-image: url("projects/banner/artism.jpg");}
+/*****************************************************/
+/******************* structures **********************/
+/*****************************************************/
 .intro{
 	text-align: center;
 	padding: 15% 5% 8% 5%;
 	color: black;
-	z-index: 100;
+	z-index: 98;
 }
-.wrapper{
-	padding: 30px 0;
+.article-index{margin: 10% 0;}
+.wrapper-project{
+	width: 100%;
+	padding: 2% 0;
+	margin: 0 auto;
 }
+.wrapper{padding: 30px 0;
+}
+/*****************************************************/
+/******************** buttons ************************/
+/*****************************************************/
 .seemore{
 	float: left;
 	width: 60%;
 	height: 10%;
 	padding: 1% 20%;
 	height: 5%;
-	margin: 10% 0 0 0;
+	margin: 5% 0 0 0;
 	background-color: #FFDEAD;
 }
-.hcenter{
-	margin-top: 24%;
-}
-.wrapper-project{
-	width: 100%;
-	padding: 2% 0;
-	margin: 0 auto;
-}
-.art{
+.hcenter{margin-top: 24%;}
+.btn-visit{
+	width: 30%;
+	font-size: 18px;
+	font-weight: 600;
+	margin: auto;
+	margin-top: 6%;
+	margin-bottom: 6%;
+	padding: 20px;
 	text-align: center;
-	padding: 0% 5%;
+	background-color: #FF6C00;
+	box-shadow: 2px 2px 12px grey;	
+	color: white;
 }
-.copyright{
-	font-size: 14px;
+.btn-visit:hover{
+	width: 30%;
+	font-size: 18px;
+	font-weight: 600;
+	margin: auto;
+	margin-top: 6%;
+	margin-bottom: 6%;
+	padding: 20px;
+	text-align: center;
+	background-color: #BA4F00;
+	color: white;
+	box-shadow: 2px 2px 12px grey;
+ 	/*transition: background-color 0.5s ease;*/
 }
-
-.logo{
-	height: 100%;
+/*****************************************************/
+/********************* footer ************************/
+/*****************************************************/
+.fa {
+    padding: 10px;
+    width: 30px;
+    height: 30px;
+	vertical-align: middle;
+    margin: 1%;
+    text-align: center;
+    color: gray;
 }
-.logo-mid{
-	width: 7%;
+.icon{
+	padding: 3px 6px 3px 0px; 
+    text-decoration: none;
+    color: #FF6C00;
+}
+.fa-chevron-down{
+	color: #FF6C00;
+	transition: color 0.5s ease;
+}
+.fa-chevron-down:hover{color: gray;
+}
+.fa-facebook{
+	border-style: solid;
+	border-width: 2px;
+	border-color: gray;
+	color: gray;
+}
+.fa-github{
+	border-style: solid;
+	border-width: 2px;
+	border-color: gray;
+	color: gray;
+}
+.fa-linkedin{
+	border-style: solid;
+	border-width: 2px;
+	border-color: gray;
+	color: gray;
+}
+.fa-facebook:hover{
+	color: white;
+    background-color: #4360B5;
+}
+.fa-github:hover{
+	color: white;
+    background-color: #171515;
+}
+.fa-linkedin:hover{
+    color: white;
+    background-color: #0096D6;
+}
+.copyright{font-size: 14px;
+}
+/*****************************************************/
+/********************* nav bar ***********************/
+/*****************************************************/
+.logo{height: 100%;
+}
+.logo-mid{width: 7%;
 }
 .navbar-fixed{
 	top: 0;
@@ -223,8 +284,7 @@ footer{
 	background-color: #FF6C00;
 /*	box-shadow: 4px 4px gray;*/
 }
-.a_nav:hover{
-	color: white;
+.a_nav:hover{color: white;
 }
 .light{
 	color: white;
@@ -233,91 +293,147 @@ footer{
 .center{
 	margin: auto;
 	text-align: center;}
-.display-left{
+.banner{
+	width: 100%;
+	margin: 0 auto;
+	padding: 2% 0;
 	float: left;
 }
-.display-right{
-	float: right;
+/*****************************************************/
+/********************* tool bar **********************/
+/*****************************************************/
+.toolbar{
+	width: 90%;
+	padding: 0% 5%;
+	margin: auto;
+	text-align: center;
+	background-color: white;
+	z-index: 98;
 }
-#avatar{
-	width: 30%;
-	margin: 1%;
-	padding: 3%;
-	display: block;
+.fixedTop{
+	position: fixed;
+	top: 0;
+	width: 90%;
+	height: 6%;
+	padding: 1% 5%;
+	margin: auto;
+	text-align: center;
+	background-color: white;
+	z-index: 98;
+}
+/*****************************************************/
+/******************** images *************************/
+/*****************************************************/
+img.project-size{
+	width: 100%;
+	height: auto;
+	padding: 2.5% 0% 0% 0%;
+}
+img.img-col-one{
+	width: 100%;
+	margin: 3% 0 1% 0;
+	height: auto;
+}
+img.img-col-two{
+	width: 100%;
+	margin: 4% 0% 1% 0%;
+	height: auto;
+}
+img.img-col-three{
+	width: 70%;
+	margin: 10% 15%;
+	height: auto;
+}
+img.img-col-four{
+	width: 100%;
+	margin: 4% 0 0 0;
+	height: auto;
+}
+img.img-col-three-close{
+	width: 32.333333%;
+	margin: 0 0 5% 0;
+	height: auto;
+}
+img.img-tab{
+	width: 100%;
+	margin: 0;
+	height: auto;
+}
+img.img-tab-content{
+	width: 40%;
+	margin-right: 5%;
+	height: auto;
 	float: left;
 }
-#about_text{
-	display: inline;
+.svg-index{
+	width: 40%;
+}
+/*****************************************************/
+/******************* row and col *********************/
+/*****************************************************/
+.row-project{
+	float: left;
+	width: 70%;
+	height: 100%;
+	padding: 3.5% 15%;
+}
+.row-project-color{
+	background-color: #fffaf0;
+}
+.row-full{
+	float: left;
+	width: 76%;
+	height: 100%;
+	padding: 3.5% 12%;
+}
+.col-one{
+	float: left;
+	width: 96%;
 	margin: 0 2%;
-	width: 60%;
-	float: left;
+	position: relative;
 }
-#skill{
-	display: inline;
-	width: 30%;
+.col-two{
+	float: left;
+	width: 46%;
 	margin: 0 2%;
-	float: right;
+	position: relative;
 }
-/*icons*/
-.fa {
-    padding: 10px;
-    width: 30px;
-    height: 30px;
-	vertical-align: middle;
-    margin: 1%;
-    text-align: center;
-    color: gray;
-}
-.icon{
-	padding: 3px 6px 3px 0px; 
-    text-decoration: none;
-    color: #FF6C00;
-}
-.fa-chevron-down{
-	color: #FF6C00;
-	transition: color 0.5s ease;
-}
-.fa-chevron-down:hover{
-	color: gray;
-}
-
-.fa-facebook{
-	border-style: solid;
-	border-width: 2px;
-	border-color: gray;
-	color: gray;
-}
-.fa-github{
-	border-style: solid;
-	border-width: 2px;
-	border-color: gray;
-	color: gray;
-}
-.fa-linkedin{
-	border-style: solid;
-	border-width: 2px;
-	border-color: gray;
-	color: gray;
-}
-.fa-facebook:hover{
-	color: white;
-    background-color: #4360B5;
-}
-.fa-github:hover{
-	color: white;
-    background-color: #171515;
-}
-
-.fa-linkedin:hover{
-    color: white;
-    background-color: #0096D6;
-}
-.row-index{
-	width: 60%;
+.col-three{
 	float: left;
-	padding: 0 20%;
+	width: 28.333333%;
+	margin: 2%;
+	position: relative;
 }
-.row-trait{
+.col-four{
+	float: left;
+	width: 21%;
+	margin: 0 2%;
+	position: relative;
+}
+.a-link{
+	text-decoration: underline;
+}
+/*****************************************************/
+/********************** index ************************/
+/*****************************************************/
+.traits{
+	float: left;
+    width: 23.33333%;
+    height: 18%;
+    margin: 0 3%;
+    position: relative;
+	padding: 2%;
+	text-align: center;
+	/*box-shadow: 2px 2px 12px grey;*/
+    border-radius: 10%;
+    background-color: white;
+}
+.section-project{
+	width: 70%;
+	float: left;
+	padding: 5% 15%;	
+}
+.section-trait{
 	width: 70%;
 	float: left;
 	padding: 5% 15%;
@@ -338,183 +454,39 @@ footer{
 	opacity: 0.7;
 	transform: scale(1.05);
 }
-.project-content{
-	display: none;
-	vertical-align: top;
-	z-index: 100;
-	background-color: rgba(255, 255, 255, 0.98);
-	height: 85%;
-	padding: 3% 12%;
-	margin: 1% 5% auto;
-	position: fixed;
-	top: 0;
-	left: 0;
-	overflow: scroll;
-}
-.close{
-	position: absolute;
-	cursor: pointer;
-	z-index: 110;
-	width: 61px;
-	height: 61px;
-	font-size: 50px;
-	line-height: 50px;
+/*****************************************************/
+/********************** project **********************/
+/*****************************************************/
+.quote{
 	text-align: center;
-	float: right;
-	top: 0;
-	right: 0;
-	color: white;
-	background-color: gray;
-}
-#video_famifilm{
-	padding: 3%;
-}
-.banner{
-	width: 100%;
-	margin: 0 auto;
-	padding: 2% 0;
-	float: left;
-}
-.banner-img{
-	float: left;
-	display: block;
-	width: 45%;
-	padding: 1%;
-}
-.banner-img-big{
-	float: left;
-	display: block;
-	width: 95%;
-	padding: 1%;
-}
-.banner-img-medium{
-	float: left;
-	display: block;
-	width: 50%;
-	padding: 1%;
-}
-.banner-img-small{
-	float: left;
-	display: block;
-	width: 32%;
-	padding: 0.5%;
-}
-.title{
+	padding:5%;
 	font-size: 20px;
+	line-height: 30px;
 }
-.detail{
-	display: none;
-}
-#video_famifilm{
-	display: none;
-}
-#overlay{
-	display: none;
-	width: 100%;
-	height: 100%;
-	position: fixed;
-	top: 0;
-	z-index: 99;
-	background-color:rgba(0, 0, 0, 0.8); 
-}
-img.project-size{
-	width: 100%;
-	height: auto;
-	padding: 2.5% 0% 0% 0%;
-}
-img.img-col-one{
-	width: 100%;
-	margin: 3% 0 1% 0;
-	height: auto;
-}
-img.img-col-two{
-	width: 100%;
-	margin: 4% 0 0 0;
-	height: auto;
-}
-img.img-col-three{
-	width: 33%;
-	margin: 4% 0 0 0;
-	height: auto;
-}
-img.img-col-three-close{
-	width: 32.333333%;
-	margin: 0 0 5% 0;
-	height: auto;
-}
-video{
-	margin: 0 15% auto;
-	width: 70%;
-	padding: 1%;
-}
-.svg-index{
-	width: 40%;
-}
-.row-project{
+.tab{
 	float: left;
-	width: 60%;
-	height: 100%;
-	padding: 3% 20%;
+	width: 33.33333%;
+	line-height: 68%;
+	margin-top: 6%;
+	cursor: pointer;
+	transition: transform .2s; /* Animation */
 }
-.row-project-color{
-	background-color: #fffaf0;
+.tab:hover{
+	transform: scale(1.08);
 }
-.row-full{
-	width: 80%;
-	padding: 0 10%;
-}
-.col-one{
+.tab-content{
+	width: 84%;
+	background-color: #FFAAAA;
 	float: left;
-	width: 90%;
-	margin: 0 2%;
-	position: relative;
+	padding: 5% 8%;
+	margin-bottom: 6%;
 }
-.col-two{
-	float: left;
-	width: 40%;
-	margin: 0 2%;
-	position: relative;
-}
-.col-three{
-	float: left;
-	width: 23%;
-	margin: 0 2%;
-	position: relative;
-}
-.col-four{
-	float: left;
-	width: 21%;
-	margin: 0 2%;
-	position: relative;
-}
-.drawer{
-	display: none;
-}
-.a-link{
-	text-decoration: underline;
-}
-
-/******************************************************/
-/******************************************************/
-/******************************************************/
-.toolbar{
-	width: 90%;
+/*****************************************************/
+/************************ art ************************/
+/*****************************************************/
+.art{
+	text-align: center;
 	padding: 0% 5%;
-	margin: auto;
-	text-align: center;
-	background-color: white;
-	z-index: 98;
-}
-.fixedTop{
-	position: fixed;
-	top: 0;
-	width: 90%;
-	height: 6%;
-	padding: 1% 5%;
-	margin: auto;
-	text-align: center;
-	background-color: white;
-	z-index: 98;
 }
 #portfolio {  
     margin: 2% 6%;
@@ -534,24 +506,15 @@ video{
     -webkit-transition: all 350ms ease;
     transition: all 350ms ease;
 }
-.tile:hover { 
-	
-}
-
-.scale-anm {
-  transform: scale(1);
-}
-
+.tile:hover { 	}
+.scale-anm {transform: scale(1);}
 .tile img {
     max-width: 100%;
     width: 100%;
     height: auto;
-    margin-bottom: 1rem;
-  
+    margin-bottom: 1rem; 
 }
-.fil-cat{
-
-}
+.fil-cat{}
 .selectedClass{
 	background-color: #FF6C00;
 	color: white !important;
@@ -570,45 +533,15 @@ video{
     -webkit-appearance: none;
     color: black;
 }
-
 .btn:hover {
   text-decoration: none;
   color: white;
   background-color: #FF6C00;
 }
-
 ::-moz-focus-inner {
   border: 0;
   padding: 0;
 }
-
-.btn-visit{
-	width: fit-content;
-	/*height: 60px;*/
-	line-height: 60px;
-	font-size: 18px;
-	font-weight: 600;
-	margin: auto;
-	padding: 0 30px;
-	text-align: center;
-	background-color: #FF6C00;
-	color: white;
-}
-.btn-visit:hover{
-	width: fit-content;
-	height: 60px;
-	line-height: 60px;
-	font-size: 19px;
-	font-weight: 600;
-	margin: auto;
-	padding: 0 30px;
-	text-align: center;
-	background-color: #FF6C5F;
-	color: white;
-	box-shadow: 2px 2px 12px grey;
- 	/*transition: background-color 0.5s ease;*/
-}
-
 .clearfix:after {
     content: "";
     display: table;
@@ -624,7 +557,3 @@ video{
 	text-align: center;
 	background-color:white; 
 }
-
-
-
-
